# JVMA_C

./: .gitignore  CMakeLists.txt  README.md  example.jvma
include/: compiler_tokens.h  decompiler.h  file_reader.h  jvm_consts.h  jvm_structs.h  utils.h
src/: decompiler.c  file_reader.c  utils.c
